Revive some options from phd thesis class.

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -1,4 +1,4 @@
-\documentclass[13pt]{dissatu}
+\documentclass[14pt]{dissatu}
 %\documentclass[a4paper,paratype,14pt,fouriernc]{dissatu}
 % atutext dejavu droid paratype fouriernc
 
@@ -10,7 +10,7 @@
 
 \input{tikzsetup.tex}
 
-\setstretch{1.2}
+%\setstretch{1.2}
 
 %\input{defs.tex}
 
@@ -46,7 +46,7 @@
 \begin{center}
   {\Large Титульная страница}
   \vfill
-  2016
+  \bookyear
 \end{center}
 \clearpage
 
@@ -55,7 +55,7 @@
 
 % ----------------------------------------------------------------------------------------------------
 
-\chapter*{Введение}
+\chapter{Введение}
 
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
@@ -70,7 +70,7 @@
 учитывающего динамику системы и зависящего от идентифицируемых параметров.
 
 
-\section{Критерии идентификации}
+\chapter{Критерии идентификации}
 
 Как уже было отмечено, для успешности процесса идентификации требуется
 построение различных интегральных критериев, зависящих,
