new style: atuthes.cls

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -38,24 +38,21 @@
 \newcommand{\Cmt}[1]{}
 
 
-\pagestyle{stheadings}
+%\pagestyle{stheadings}
 
 % ====================================================================================================
 \begin{document}
 
-\begin{center}
-  {\Large Титульная страница}
-  \vfill
-  \bookyear
-\end{center}
-\clearpage
+\input{titul.tex}
 
+\clearpage
 \tableofcontents
 
 
 % ----------------------------------------------------------------------------------------------------
 
-\chapter{Введение}
+\chapter*{Введение}
+\addcontentsline{toc}{chapter}{Введение}
 
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
@@ -373,7 +370,7 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 программное средство ``qontrol''.
 
 
-\section{Тестовые хаотические системы }
+\chapter{Тестовые хаотические системы }
 
 % \input{lor_testsys.tex} % unfilled, but is near to good
 
@@ -399,7 +396,8 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 
 
-\section{Выводы}
+\chapter*{Выводы}
+\addcontentsline{toc}{chapter}{Выводы}
 
 В целом, применение рассмотренных видов критериев, в совокупности
 с мультимодельными (мультиагентными) методами поисковой идентификации
