--- a/chua_testsys.tex
+++ b/chua_testsys.tex
@@ -1,6 +1,6 @@
 
 \FloatBarrier
-\subsubsection{Система Чуа} % _CHUA_
+\subsection{Система Чуа} % _CHUA_
 
 \LinkRef{
  chua: ASAU-18, MKMM-2014, APIR-2011
