--- a/colp_testsys.tex
+++ b/colp_testsys.tex
@@ -1,5 +1,5 @@
 \FloatBarrier
-\subsubsection{Генератор Колпитца} % _COLP_
+\subsection{Генератор Колпитца} % _COLP_
 
 \LinkRef{
   colp: ASAU-21, APIR-2013
