--- a/deadvi_testsys.tex
+++ b/deadvi_testsys.tex
@@ -1,7 +1,7 @@
 
 \FloatBarrier
 
-\subsubsection{Колебательная с зоной нечувствительности в возвращающей силе} % _DEADVI_
+\subsection{Колебательная с зоной нечувствительности в возвращающей силе} % _DEADVI_
 
 \LinkRef{
   deadvi: ASAU-20, ISDMCI-2013
