--- a/fric_testsys.tex
+++ b/fric_testsys.tex
@@ -1,6 +1,6 @@
 
 \FloatBarrier
-\subsubsection{Система с сухим трением} % __FRIC__
+\subsection{Система с сухим трением} % __FRIC__
 
 \LinkRef{
   fric: ASAU-11, DSMP-2016
