--- a/ross_testsys.tex
+++ b/ross_testsys.tex
@@ -1,6 +1,6 @@
 
 \FloatBarrier
-\subsubsection{Система Рёсслера} % _ROSS_
+\subsection{Система Рёсслера} % _ROSS_
 
 \LinkRef{
   ross: ASAU-14. ISDMCI-2011, ISDMCI-2012
