--- a/vdp_testsys.tex
+++ b/vdp_testsys.tex
@@ -1,6 +1,6 @@
 
 \FloatBarrier
-\subsubsection{Система Ван-дер-Поля} % _VDP_
+\subsection{Система Ван-дер-Поля} % _VDP_
 
 \LinkRef{
   vdp: ASAU-16, 17(alt), ITMM-2011
