--- a/vglass_testsys.tex
+++ b/vglass_testsys.tex
@@ -1,6 +1,6 @@
 
 \FloatBarrier
-\subsubsection{Колебательная система с гистерезисом в возвращающей силе} % _VGLASS_
+\subsection{Колебательная система с гистерезисом в возвращающей силе} % _VGLASS_
 
 \LinkRef{
   vglass: ITMM-2013
