Import vakthesis and convert it to vakthesisatu.

--- a/titul.tex
+++ b/titul.tex
@@ -1,6 +1,7 @@
 \thispagestyle{empty}
-\begin{center}
-  {\Large Титульная страница}
-  \vfill
-  \bookyear
-\end{center}
+\Xmaketitle
+% \begin{center}
+%   {\Large Титульная страница}
+%   \vfill
+%   \bookyear
+% \end{center}
