--- a/atudiss.tex
+++ b/atudiss.tex
@@ -1,25 +1,29 @@
-\documentclass[14pt]{dissatu}
-%\documentclass[a4paper,paratype,14pt,fouriernc]{dissatu}
-% atutext dejavu droid paratype fouriernc
+\documentclass[d]{vakthesisatu}
+%\documentclass[14pt]{dissatu}
 
 \usepackage[verbose,dvips,a4paper,tmargin=20mm,bmargin=25mm,lmargin=25mm,rmargin=20mm,headsep=4pt,includeheadfoot]{geometry}
+\newlength\TW
 \setlength{\TW}{0.01\textwidth} % after geometry!
 
-%\input{commonsetup.tex}
-\usepackage[backend=biber,sorting=none,maxnames=3,bibstyle=gost-numeric]{biblatex}
+\usepackage[backend=biber,language=russian,sorting=none,maxnames=3,bibstyle=gost-numeric]{biblatex}
 
 \input{tikzsetup.tex}
 
 %\setstretch{1.2}
 
-%\input{defs.tex}
-
-\newcommand{\bookname}{``Диссертация''}
+\newcommand{\bookname}{Моделі та  методи адаптивно-пошукової ідентифікації систем з хаотичною динамікою}
 \newcommand{\bookyear}{2016}
 \newcommand{\dissauthor}{Гуда~А.И.}
 
 \title{\bookname}
-\author{\dissauthor}
+\author{Гуда Антон Игоревич}
+\supervisor{Михалёв Александр Ильич}{д.т.н., проф.}
+\speciality[математичне моделювання та обчислювальні методи]{01.05.02}[технических наук]
+\udc{681.5.015}
+\date{\bookyear}
+\institution{Национальная металлургическая академия Украины, Министерство образования и науки Украины}{Днепропетровск}
+
+%\author{\dissauthor}
 
 \addbibresource{atuworks.bib}
 \addbibresource{artrefs.bib}
@@ -52,7 +56,6 @@
 % ----------------------------------------------------------------------------------------------------
 
 \chapter*{Введение}
-\addcontentsline{toc}{chapter}{Введение}
 
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
@@ -397,7 +400,6 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 
 \chapter*{Выводы}
-\addcontentsline{toc}{chapter}{Выводы}
 
 В целом, применение рассмотренных видов критериев, в совокупности
 с мультимодельными (мультиагентными) методами поисковой идентификации
