Adopt size to 13pt, adjust sizes.
And sometemplate words in preambule.

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -1,7 +1,7 @@
-\documentclass[d,ruslang]{vakthesisatu}
+\documentclass[13pt,d,ruslang]{vakthesisatu}
 %\documentclass[14pt]{dissatu}
 
-\usepackage[verbose,dvips,a4paper,tmargin=20mm,bmargin=25mm,lmargin=25mm,rmargin=20mm,headsep=4pt,includeheadfoot]{geometry}
+\usepackage[verbose,showframe,a4paper,tmargin=20mm,bmargin=20mm,lmargin=25mm,rmargin=20mm,headsep=4pt]{geometry}
 \newlength\TW
 \setlength{\TW}{0.01\textwidth} % after geometry!
 
@@ -58,13 +58,13 @@
 
 
 % ----------------------------------------------------------------------------------------------------
-\subimport{p0/}{p0.tex} % p0/p0.tex
+\subimport{p0/}{p0.tex} % p0/p0.tex  % введение
 
-\subimport{p1/}{p1.tex} % p1/p1.tex
+\subimport{p1/}{p1.tex} % p1/p1.tex  % обзор
 
-\subimport{p2/}{p2.tex} % p2/p2.tex
+\subimport{p2/}{p2.tex} % p2/p2.tex  % критерии
 
-\subimport{p3/}{p3.tex} % p3/p3.tex
+\subimport{p3/}{p3.tex} % p3/p3.tex  % методы
 
 \subimport{p4/}{p4.tex} % p4/p4.tex
 
