--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -1,5 +1,8 @@
 \chapter*{Введение}
 
+\paragraph{Актуальность темы}.
+В настоящее время ...
+
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
 аналитической зависимости значений идентифицируемых параметров
@@ -11,3 +14,71 @@
 Успешность построения системы идентификации для хаотических
 систем определяется наличием интегрального критерия,
 учитывающего динамику системы и зависящего от идентифицируемых параметров.
+
+\paragraph{Связь работы с научными программами, планами, темами.}
+Диссертационная работы выполнялась в соответствии с 
+
+\paragraph{Цель и задания исследования.}
+Целью диссертационной работы является
+
+Достижение этой цели требует решения следующих задач:
+
+\begin{itemize}
+
+\item
+
+\item
+
+\item
+
+\end{itemize}
+
+\textit{Объект исследования} --- 
+
+\textit{Предмет исследования} ---
+
+\textit{Методы исследования} ---
+
+\paragraph{Научная новизна результатов диссертационной работы} заключается в
+развитии теории 
+
+Основные результаты, определяющие новизну диссертационной работы,
+состоят в следующем:
+
+\begin{itemize}
+
+\item
+  впервые предложен комплексный подход к оцениванию параметров
+
+\item
+
+\item
+
+\end{itemize}
+
+
+\paragraph{Практическое значение полученных результатов.}
+Разработанные методы исследования и математические модели
+
+Все результаты внедрения подтверждены соответствующими актами
+(Приложение А).
+
+\paragraph{Личный вклад соискателя.} Все результаты диссертационной работы
+получены автором самостоятельно и опубликованы в работах [].
+В работах, опубликованных в соавторстве, автору
+принадлежат следующие результаты:
+
+
+\paragraph{Апробация результатов диссертации.}
+Основные результаты проведенных исследований были представлены, докладывались и
+обсуждались на следующих научных конференциях:
+
+\paragraph{Публикации.}
+Основные результаты по теме диссертации изложены в XXX
+опубликованных работах: XXX статьях, из них XXX статьи в научных
+специализированных изданиях Украины, XXX статьи в международных изданиях,
+XXX публикация в сборниках материалов и тезисов докладов научно-технических
+конференций.
+
+
+
