--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -1,8 +1,15 @@
-\chapter{Обзор}
+\chapter{Обзор состояния проблемы и постановка задачи исследования}
+
+\section{Основные понятия задачи идентификации динамических систем}
+
+\section{Свойства систем хаотической динамики применительно к задаче идентификации}
+
+\section{Существующие методы идентификации нелинейных динамических систем и их свойства}
+
+
+\section{Постановка задачи исследования}
 
 Обзор он и есть обзор
-
-\section{Постановка задачи ислледования}
 
 \section{Выводы по разделу 1}
 
