--- a/p4/fric_testsys.tex
+++ b/p4/fric_testsys.tex
@@ -33,7 +33,7 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 силы трения покоя. Эта особенность не даёт возможности
 аналитического анализа таких систем, за исключением ограниченного набора
 вырожденных случаев. При этом, такое поведение существенно затрудняет идентификацию,
-и, в определённых случая,х делает её принципиально невозможной.
+и, в определённых случая, делает её принципиально невозможной.
 
 Основным параметром, в простейшем случае определяющим силу сухого
 трения, является $f_{dm}$ -- максимальная значение её модуля.
