More wordc copyed from tasks

--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -26,18 +26,46 @@
 \begin{itemize}
 
 \item
+  создать новые критерии идентификации, которые, в отличие от существующих,
+  были бы применим для анализа состояния, динамики и решения задач идентификации
+  хаотических систем;
+
+\item
+  развить существующие и создать новые методы поисковой идентификации,
+  которые в полной мере использовали возможности
+  параллельных вычислений и преимущества синергетического поведения
+  ансамбля моделей;
+
+\item
+
 
 \item
 
 \item
+
+\item
+  создать программное обеспечение, приспособленное как
+  для моделирования систем хаотической динамики,
+  так и для моделирования процессов идентификации таких систем;
+
+\item
+  провести компьютерное моделирование процессов идентификации систем хаотической динамики,
+  исследовать их работоспособность, возможности и характеристики.
+
 
 \end{itemize}
 
-\textit{Объект исследования} --- 
+\textit{Объект исследования} ---
+системы адаптивно-поисковой идентификации систем хаотической динамики.
 
 \textit{Предмет исследования} ---
+математические модели систем адаптивно-поисковой идентификации систем хаотической динамики.
 
 \textit{Методы исследования} ---
+математический аппарат теории управления и идентификации,
+вычислительные методы,
+теория информации,
+\ldots
 
 \paragraph{Научная новизна результатов диссертационной работы} заключается в
 развитии теории 
