--- a/p2/p2.tex
+++ b/p2/p2.tex
@@ -1,5 +1,49 @@
 \chapter{Критерии идентификации}
 
+\section{Отличие задачи идентификации от поиска экстремума}
+
+На первый взгляд, при заданном критерии идентификации, задача идентификации
+сводится к классической задаче описка экстремума: надо найти такие значения
+параметров, при которых критерий принимает максимальное значение.
+На самом деле, существуют определённые аспекты, которые делают такое
+сведение практически невозможным.
+
+Прежде всего, в задаче поиска
+экстремума предполагается, что наблюдаемая система статична:
+значение критерия не зависит от времени, и проведя измерение
+в точке один раз, можно к нему не возвращаться.
+Напротив, идентификация динамической системы предполагает,
+что значение критерия, даже после какого-либо усреднения на конечном
+интервале времени, есть величина динамическая, причём динамика определяется
+не только параметрами системы, но и свойствами самой системы измерения,
+а также процессом взаимодействия системы измерения с моделями. При этом
+возможны весьма нетривиальные результаты, такие как параметрический
+резонанс, распространение параметрических волн на множестве моделей и т.д.
+
+Также существенную роль могут играть как шумы измерения, так и побочные
+эффекты от процесса фильтрации шумов. Большая часть фильтров приводит к запаздыванию
+в процессе измерения, и игнорирование этих явлений может привести
+к нарушению устойчивости поиска.
+
+В задаче поиска экстремума предполагается, что не только
+значение функции известно точно в каждой точке, но также известны все производные.
+В реальные задачах идентификации производные непосредственно
+не доступны для измерения, а их оценка требует применения специальных
+методов. При этом процесс оценивания производных, как правило,
+более чувствителен к шумам измерения, чес собственно измерение.
+
+Далее, в в задачах поиска экстремума не учитывается возможность
+смещения экстремума со временем. Напротив, в задачах идентификации
+или же изначально предполагается вариабельность параметров, или же
+имеются ограничение на время измерения.
+
+
+Все эти явления делают задачу идентификации более сложной, чем
+классическая задача поиска экстремума, чем и обусловлено
+существование широкого спектра методов идентификации. Тем не менее,
+некоторые алгоритмы, применимые при поиска экстремума, могут быть
+полезны при синтезе системы идентификации.
+
 Как уже было отмечено, для успешности процесса идентификации требуется
 построение различных интегральных критериев, зависящих,
 хотя бы в первом приближении
