--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1,6 +1,98 @@
 \chapter{Поисковые методы идентификации}
 
-\section{Мультимодельные методы идентификации}
+\section{Методы поиска}
+
+\subsection{Основные параметры поиска}
+
+
+\subsubsection{Общие свойства объектов с точки зрения идентификации}
+
+\subsubsection{Априорная и текущая информация}
+
+Без априорной информации невозможно построение
+работоспособной системы идентификации. Основные
+априорные величины определяются на этапе постановки
+задачи идентификации. В первую очередь это
+параметры масштаба: допустимый диапазон
+изменения параметров \( \mathbf{P}\),
+характерное время работы
+идентифицируемой системы, а также
+требуемая точность и скорость идентификации
+(могут быть заданы различными способами).
+В этот список входи и максимальная скорость изменения параметра.
+В процессе работы эти параметры могут уточнятся по текущей информации.
+
+Следующую часть априорной (по отношению к идентификации) информации
+предоставляет процесс синтеза критерия идентификации.
+В первую очередь, это сам вид критерия. Им определятся
+как диапазон изменения величины этого критерия, так и
+динамические свойства: характерное/минимально время
+оценивали \(\tau\) (или даже оценка зависимости $\tau$ от точности и других параметров),
+характерное время реакции системы на изменение
+параметра с учётом динамики измерения \(q\).
+
+
+
+\subsection{Время и история}
+
+Способы учёта истории системы и динамических характеристик.
+
+\subsection{ Использование множества моделей / агентов}
+
+
+\subsubsection{Один агент}
+
+Единственный неподвижный агент практически не имеет смысла
+с точки зрения синтеза системы идентификации.
+Он может сигнализировать о том, что в пределах
+\(\tau\) модель была или не была достаточно адекватна
+объекту.
+
+Наличие истории и возможность перемещаться дают возможность
+построить систему идентификации и на одном агенте.
+В качестве истории могут использоваться, в том числе,
+динамические свойства идентифицируемого объекта
+(оригинальный метод АПИ). Также могут быть
+применены интегрирующие элементы агента идентификации
+(синхронный детектор, \ldots).
+
+\subsubsection{Пара агентов}
+
+Пара агентов, взаимодействующая между собой,
+способна оценить градиент функции качества,
+и, следовательно, обеспечить смещение в требуемом направлении.
+
+С учетом глобальной информации возможна адаптация параметров пары.
+В свою очередь, информация, полученная от пары может
+использоваться для уточнения глобальных параметров.
+
+\subsubsection{Триплет агентов}
+
+Три соседних агента, взаимодействующие между собой,
+способны не только оценить градиент функции качества в своей окрестности,
+но и определить (опять же, оценочно) наличие там максимума.
+
+\subsubsection{Ансамбль агентов}
+
+\subsection{Адаптация}
+
+\Cmt{
+Какие параметры системы идентификации можно адаптировать
+и на каком уровне.
+
+Когда имеет смысл играть с чувствительностью.
+
+Как близко имеет смысл подводить модели к экстремуму?
+}
+
+
+Стабильные/мобильные модели.
+
+История: локальная + глобальная
+
+\subsection{Качество идентификации}
+
+\Cmt{Расширить из кандидатской с учётом времени и множества моделей.}
 
 Процесс поисковой идентификации заключается в настройке параметров одной
 или нескольких моделей, анализу критериев идентификации
@@ -19,6 +111,7 @@ $ \mathbf{M}_0 \ldots \mathbf{M}_{N-1} $.
 объекта, $q_{mi}(t)$ -- для $i$-той модели.
 Соответственно $p_o(t)$ -- значение параметра для объекта,
 $p_{mi}(t)$ -- для $i$-той модели.
+
 
 
 Определение: \textbf{поисковый агент} -- это динамическая система, получающая выходной ($x(t)$),
@@ -275,9 +368,35 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 при различной динамике изменения параметров, а также
 настроить параметры самой системы идентификации.
 
-Для моделирования как рассматриваемых идентифицируемых систем,
-так и динамики процессов идентификации использовалась разработанное
-программное средство ``qontrol''.
+Сколько всего надо моделей? Размер пространства параметров.
+Рой, коллектив, главнюк.
+Зачем агентам перемещаться?
+
+
+\textbf{ Рой } -- множество агентов, обеспечивающее идентификацию за счёт
+сосредоточения максимального количества агентов
+в области предполагаемого максимума функции качества.
+Обычно -- три составляющие поведения
+(движение о оцениваемому локальному экстремуму, -- к глобальному, случайная составляющая).
+
+\Cmt{Для сравнения требуется и это промоделировать.
+Достаточно накладно -- надо много агентов.}
+
+Достоинства -- простота алгоритмов.
+Недостатки -- требуется избыточное количество агентов.
+Значительная часть агентов, находящихся вблизи экстремума,
+практически не приносит информации. Роевые
+алгоритмы (как и их прообразы в живой природе) ориентированы
+для увеличения добычи ресурсов, а не информации.
+
+\textbf{ Ансамбль } -- множество агентов, обеспечивающее идентификацию за счёт
+распределения агентов таким образом, который обеспечивает как
+точность идентификации за счёт ограниченного скопления агентов
+в областях предполагаемых максимумов, так и оперативное переключение
+на другие области при изменении параметров за счёт недопущения
+неоправданной скученности агентов.
+
+\Cmt{ Заметная часть новизны планируется здесь}
 
 
 \section{Выводы по разделу 3}
