--- a/p4/qontrol.tex
+++ b/p4/qontrol.tex
@@ -3,19 +3,66 @@
 
 \section{Анализ существующих систем} % ---------------------------------------------
 
-\subsection{Matlab, simulink}
+\paragraph{Matlab, simulink}
 
-\subsection{Scilab, XXX}
+Этот коммерческий продукт является стандартом де-факто
+в исследовательских работах в задачах моделирования динамических систем,
+а также многих других областях. Среди положительных особенностей следует
+отметить наличие большого количества пакетов для решения разнообразных задач,
+развитый, хоть и немного ограниченный язык программирования, поддержка множества
+вычислительных платформ. Из недостатков следует отметить заметное навязывание
+исследователю методов и приёмов работы, сокрытие от пользователя деталей применяемых
+алгоритмов, непомерную стоимость, ограниченные возможности работы с оборудованием.
 
-\subsection{Multisim}
 
-\subsection{LabView}
+\paragraph{Scilab, octave}
 
-\subsection{Выводы}
+Являются Open-source аналогами Matlab, имеют практически совместимый язык программирования,
+набор базовых возможностей и пакетов. Отличаются заметно меньшим количеством доступных
+пакетов, что достаточно хорошо перекрывается открытостью платформы, что позволяет
+с меньшими усилиями реализовывать свои расширения. Бесплатность, открытость
+и свободная лицензия (CeCILL, GPLv3+) представляют серьёзные преимущества для
+исследователя. Тем не менее, совместимость с Matlab имеет и обратную сторону,
+а именно ограниченность языка и навязывание приёмов работы.
+
+\paragraph{Multisim}
+
+Специальный коммерческий продукт, предназначенный для моделирования, проектирования
+и анализа преимущественно электронных схем. Благодаря большой базе электронных
+компонентов и применению специальных алгоритмов заметно упрощает
+разработку и моделирование именно электронных устройств. Наличие
+набора ``идеальных'' элементов, применяемых в теории управления,
+позволяет в какой-то мере расширить круг задач за пределы
+электронного моделирования. Тем не менее, этот продукт остаётся
+узкоспециализированным средством. Более того, закрытость и ограниченность средств настройки
+применяемых алгоритмов моделирования не даёт в отдельных случаях
+ни получить адекватный результат, ни определить точно причину подобного поведения.
+
+\paragraph{LabView}
+
+Еще один коммерческий продукт, применяемый преимущественно для
+моделирования и анализа электронных схем. Отличительной особенностью
+данного продукта являются развитые средства взаимодействия
+с реальными измерительным приборами исполнительными механизмами.
+При этом, список таких внешних устройств определяется
+ограниченным набором производителей, и применение собственных
+разработок в этом пакете возможно, если создаваемое устройство
+симулирует одно из стандартных. Это существенно снижает применимость
+данного пакета при взаимодействии с нестандартным оборудованием.
+
+
+
+\paragraph{Выводы}
+
+Таким образом, для проведения исследований, связанных с решением
+поставленных проблем, требуется разработка как специального программного
+обеспечения, так и взаимодействующих с ним аппаратных измерительных средств.
 
 
 
 \section{Требования к системе моделирования} % ---------------------------------------------
+
+Созанный ?
 
 \section{Основы построения программно-аппаратного комплекса} % ------------------------------
 
