Add Lorenz pics

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -68,7 +68,7 @@
 
 \subimport{p4/}{qontrol.tex} % p4/qontrol.tex
 
-\subimport{p5/}{testsys.tex} % p5/testssys.tex
+\subimport{p5/}{testsys.tex} % p5/testsys.tex
 
 \subimport{p6/}{colp_real.tex} % p6/colp_real.tex
 
