--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -1,8 +1,8 @@
 \chapter{Тестовые хаотические системы }
 
-% \input{lor_testsys.tex} % unfilled, but is near to good
+\input{lor_testsys.tex} % unfilled, but is near to good
 
-% \input{duff_testsys.tex}
+\input{duff_testsys.tex}
 
 \input{chua_testsys.tex} % good
 
@@ -18,7 +18,7 @@
 
 \input{fric_testsys.tex}  % good
 
-\input{relax_testsys.tex} % no id
+% \input{relax_testsys.tex} % no id
 
 \input{vglass_testsys.tex} %
 
